<resources>
    <string name="app_name">Parianom</string>
    <string name="masuk">Masuk</string>
    <string name="username">Nama / Username</string>
    <string name="password">Kata Sandi / Password</string>
    <string name="email">Email</string>
    <string name="hp">No. Handphone</string>
    <string name="daftar">Daftar</string>
    <string name="title_activity_otp">Otp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="resend">Resend.</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="beranda">Beranda</string>
    <string name="pesan">Pesan</string>
    <string name="riwayat">Riwayat</string>
    <string name="profil">Profil</string>
    <string name="pasar_kriya_dan_olahan_madiun">Pasar Kriya dan Olahan Madiun</string>
    <string name="parianom_board">Parianom merupakan aplikasi yang digunakan sebagai media penjualan dan pembelian produk pangan dan produk kriya untuk masyarakat.</string>
    <string name="mulai">Mulai</string>
    <string name="top_of_the_day">Top of the day</string>
    <string name="kategori">Kategori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="bukti_belanja">Bukti Belanja</string>
    <string name="pesanan">Pesanan</string>
    <string name="harga">Harga</string>
    <string name="total">Total</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="keluar">Keluar</string>
    <string name="pangan">Pangan</string>
    <string name="cari_kecamatan">Cari Kecamatan</string>
    <string name="kriya">Kriya</string>
    <string name="parianom_buka_toko">Parianom memberikan solusi penguatan ekonomi masyarakat di Kabupaten Madiun</string>
    <string name="persiapan_buka_toko">Siapkan KTP Anda terlebih dahulu untuk pengisian data pada saat pendaftaran pembuatan toko</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="nik">Nomor Nik</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_asing">Alamat / Address</string>
    <string name="foto_ktp">foto ktp</string>
    <string name="pilih_file_ktp">Pilih File KTP</string>
    <string name="simpan">Simpan</string>
    <string name="kecamatan">kecamatan</string>
    <string name="terimakasih_telah_mendaftar">Terimakasih Telah Mendaftar</string>
    <string name="tunggu_konfirmasi">Tunggu Konfirmasi dari Admin</string>
    <string name="selesai">Selesai</string>
    <string name="daftar_jualan">Daftar Jualan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="transaksi">Transaksi</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="kabupaten_madiun">Kabupaten Madiun</string>
    <string name="kirim">Kirim</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="buka_toko">Buka Toko</string>
    <string name="tanggal">Tanggal</string>
    <string name="jumlah">Jumlah</string>
    <string name="makanan">Makanan</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="profil_toko">Profil Toko</string>
    <string name="edit_profil_toko">Edit Profil Toko</string>
    <string name="scan_kode_qr">Scan Kode QR</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="minuman">Minuman</string>
    <string name="camilan">Camilan</string>
    <string name="bahan_baku">Bahan Baku</string>
    <string name="terimakasih_telah_memesan">Terimakasih Telah Memesan</string>
    <string name="tunggu_sampai_pesanan_datang">Tunggu sampai pesanan datang</string>
    <string name="stok">Stok</string>
    <string name="silahkan_masuk_terlebih_dahulu">Silahkan Masuk Terlebih Dahulu</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="nama_lengkap">Nama Lengkap / Full Name</string>
    <string name="koneksi_jaringan_anda_terputus">Koneksi jaringan Anda terputus</string>
    <string name="produk_belum_tersedia">Produk Belum Tersedia</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="pilih">Pilih</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="lokasi">Lokasi</string>
    <string name="tahap_1">Tahap 1/3 : Tambahkan Informasi Toko</string>
    <string name="tahap_2">Tahap 2/3 : Tambahkan Informasi Sertifikat</string>
    <string name="tahap_3">Tahap 3/3 : Verifikasi KTP</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="opsional">(Opsional)</string>
    <string name="enkripsi">Data telah dienkripsi untuk menjaga informasi pribadi Anda</string>
    <string name="nomor_npwp">Nomor NPWP</string>
    <string name="lain_lain">Lain - lain</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="laporkan">Laporkan Penjual</string>
    <string name="tambahkan_bukti">Tambahkan Bukti</string>
    <string name="keterangan">Keterangan</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="maaf_anda_bukan_penduduk_kab_madiun">Maaf, Anda bukan penduduk Kab. Madiun</string>
    <string name="suspend">Maaf, toko Anda ditutup selama 7 hari.\nSilahkan kunjungi pusat bantuan untuk informasi lebih lanjut.</string>
    <string name="banned">Maaf, toko anda ditutup secara permanen.</string>
    <string-array name="kecamatan">
        <item>Pilih Kecamatan</item>
        <item>Balerejo</item>
        <item>Dagangan</item>
        <item>Dolopo</item>
        <item>Geger</item>
        <item>Gemarang</item>
        <item>Jiwan</item>
        <item>Kare</item>
        <item>Kebonsari</item>
        <item>Madiun</item>
        <item>Mejayan</item>
        <item>Pilangkenceng</item>
        <item>Saradan</item>
        <item>Sawahan</item>
        <item>Wonoasri</item>
        <item>Wungu</item>
    </string-array>
    <string-array name="kategori">
        <item>Pangan</item>
        <item>Kriya</item>
    </string-array>
    <string-array name="jenisPangan">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Camilan</item>
        <item>Bahan Baku</item>
    </string-array>
    <string-array name="jenisKriya">
        <item>Hasil Kriya</item>
        <item>Bahan Baku</item>
    </string-array>
    <string-array name="poinPengaduan">
        <item>Penjualan mengindikasikan penipuan</item>
        <item>Produk melanggar ketentuan penjualan</item>
        <item>Produk melanggar hak cipta atau distribusi</item>
        <item>Produk mencuri foto, judul, atau deskripsi produk lain tanpa izin</item>
    </string-array>
</resources>