<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#32D2D6D8"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih"
            android:padding="10dp"
            style="@style/fontTitleContent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D6D1D1"
            android:layout_below="@+id/imgUserChat"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:id="@+id/kamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kamera"
            style="@style/fontEdit"
            android:gravity="center|left"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginVertical="1dp"/>
        <TextView
            android:id="@+id/galeri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galeri"
            style="@style/fontEdit"
            android:gravity="center|left"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginVertical="1dp"/>
        <TextView
            android:id="@+id/lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            style="@style/fontEdit"
            android:gravity="center|left"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginVertical="1dp"/>
    </LinearLayout>
</LinearLayout>