<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@color/shimmer"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_edit_img"
                android:background="@android:color/transparent"
                android:layout_gravity="bottom|right"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/nama_lengkap"
            android:textAllCaps="true"
            style="@style/fontMasuk"
            android:inputType="text"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/username"
            android:textAllCaps="true"
            style="@style/fontMasuk"
            android:inputType="text"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/email"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/hp"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@color/shimmer"
                android:singleLine="true"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/alamat_asing"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/kata_sandi"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:singleLine="true"/>
        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/simpan_perubahan"
            style="@style/fontBtn"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="12dp"/>
    </LinearLayout>
</LinearLayout>