<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FormBukaToko">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:theme="@style/ToolbarColoredBackArrow">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/titleBar"
                    style="@style/fontTitleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/buka_toko"
                    android:textSize="16dp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/nama_toko"
            android:textAllCaps="true"
            style="@style/fontMasuk"
            android:inputType="text"/>
        <EditText
            android:id="@+id/namaBukaToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            style="@style/fontMasuk"
            android:textColor="@color/black"
            android:backgroundTint="@color/label_input"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/nik"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <EditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            style="@style/fontMasuk"
            android:textColor="@color/black"
            android:backgroundTint="@color/label_input"
            android:singleLine="true"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/alamat"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <EditText
            android:id="@+id/alamatBukaToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            style="@style/fontMasuk"
            android:textColor="@color/black"
            android:backgroundTint="@color/label_input"
            android:lines="1"
            android:inputType="text"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/kecamatan"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>

        <Spinner
            android:id="@+id/kecamatanBukaToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/kecamatan"
            android:paddingVertical="15dp"
            android:theme="@style/fontEdit"
            android:spinnerMode="dialog"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/foto_ktp"
            android:textAllCaps="true"
            style="@style/fontMasuk"/>
        <Button
            android:id="@+id/ktp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/ic_upload"
            android:text="Pilih File KTP"
            style="@style/fontBtn"
            android:layout_marginVertical="3dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="12dp"/>
        <Button
            android:id="@+id/btnSimpanToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/simpan"
            style="@style/fontBtn"
            android:layout_marginTop="30dp"
            android:textSize="12dp"/>
    </LinearLayout>

</LinearLayout>